<?xml version="1.0"?>
<package>
  <name>rtt_ros_control_embedded</name>
  <version>1.0.0</version>
  <description>RTT hardware interface and orocos wrapper </description>

  <license>BSD</license>

  <author email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</author>
  <maintainer email="hoarau@isir.upmc.fr">Antoine Hoarau</maintainer>

  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rtt</build_depend>
  <build_depend>rtt_ros</build_depend>
  <build_depend>rtt_rosclock</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>rtt_roscomm</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>eigen</build_depend>

  <run_depend>eigen</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rtt</run_depend>
  <run_depend>rtt_rosnode</run_depend>
  <run_depend>rtt_ros</run_depend>
  <run_depend>rtt_rosclock</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>rtt_roscomm</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
      <plugin_depend>rtt_rosnode</plugin_depend>
      <plugin_depend>rtt_rosclock</plugin_depend>
      <plugin_depend>rtt_control_msgs</plugin_depend>
      <plugin_depend>rtt_controller_manager_msgs</plugin_depend>
  </export>
</package>
